--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <TextView
+    <ImageView
+        android:id="@+id/theSimpsons"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_weight="1"
+        android:src="@drawable/animation_the_simpsons"
+        android:contentDescription="@string/t_tol_dels_simpsons" />
 
-</android.support.constraint.ConstraintLayout>
+    <ImageView
+        android:id="@+id/homer"
+        android:layout_width="wrap_content"
+        android:layout_height="410dp"
+        android:layout_weight="1"
+        android:src="@drawable/homer_simpson"
+        android:contentDescription="@string/homer_simpson" />
+
+</LinearLayout>
