--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -7,18 +8,110 @@
 
     <ImageView
         android:id="@+id/theSimpsons"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="225dp"
+        android:layout_height="156dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
         android:layout_weight="1"
+        android:contentDescription="@string/t_tol_dels_simpsons"
         android:src="@drawable/animation_the_simpsons"
-        android:contentDescription="@string/t_tol_dels_simpsons" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
 
     <ImageView
         android:id="@+id/homer"
-        android:layout_width="wrap_content"
-        android:layout_height="410dp"
+        android:layout_width="212dp"
+        android:layout_height="372dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
         android:layout_weight="1"
+        android:contentDescription="@string/homer_simpson"
         android:src="@drawable/homer_simpson"
-        android:contentDescription="@string/homer_simpson" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
 
-</LinearLayout>
+    <ImageView
+        android:id="@+id/donut"
+        android:layout_width="138dp"
+        android:layout_height="134dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="132dp"
+        android:layout_marginEnd="8dp"
+        android:layout_weight="1"
+        android:contentDescription="@string/donut"
+        android:src="@drawable/donut"
+        android:visibility="invisible"
+        app:layout_constraintEnd_toStartOf="@+id/homer"
+        app:layout_constraintHorizontal_bias="0.729"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/theSimpsons" />
+
+    <ImageView
+        android:id="@+id/ull"
+        android:layout_width="37dp"
+        android:layout_height="37dp"
+        android:contentDescription="@string/ull"
+        android:src="@drawable/ull"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="@+id/homer"
+        app:layout_constraintEnd_toEndOf="@+id/homer"
+        app:layout_constraintHorizontal_bias="0.16"
+        app:layout_constraintStart_toStartOf="@+id/homer"
+        app:layout_constraintTop_toTopOf="@+id/homer"
+        app:layout_constraintVertical_bias="0.447" />
+
+    <ImageView
+        android:id="@+id/engranatge_vermell"
+        android:layout_width="65dp"
+        android:layout_height="65dp"
+        android:contentDescription="@string/engranatge_vermell"
+        android:src="@drawable/engranatge_vermell"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="@+id/homer"
+        app:layout_constraintEnd_toEndOf="@+id/homer"
+        app:layout_constraintHorizontal_bias="0.367"
+        app:layout_constraintStart_toStartOf="@+id/homer"
+        app:layout_constraintTop_toTopOf="@+id/homer"
+        app:layout_constraintVertical_bias="0.25" />
+
+    <ImageView
+        android:id="@+id/engranatge_verd"
+        android:layout_width="55dp"
+        android:layout_height="55dp"
+        android:contentDescription="@string/engranatge_verd"
+        android:src="@drawable/engranatge_verd"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="@+id/homer"
+        app:layout_constraintEnd_toEndOf="@+id/homer"
+        app:layout_constraintHorizontal_bias="0.757"
+        app:layout_constraintStart_toStartOf="@+id/homer"
+        app:layout_constraintTop_toTopOf="@+id/homer"
+        app:layout_constraintVertical_bias="0.274" />
+
+    <ImageView
+        android:id="@+id/engranatge_blau"
+        android:layout_width="55dp"
+        android:layout_height="55dp"
+        android:contentDescription="@string/engranatge_blau"
+        android:src="@drawable/engranatge_blau"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="@+id/homer"
+        app:layout_constraintEnd_toEndOf="@+id/homer"
+        app:layout_constraintHorizontal_bias="0.566"
+        app:layout_constraintStart_toStartOf="@+id/homer"
+        app:layout_constraintTop_toTopOf="@+id/homer"
+        app:layout_constraintVertical_bias="0.416" />
+
+</android.support.constraint.ConstraintLayout>
